--- a/index.css
+++ b/index.css
@@ -1,79 +1,47 @@
 body {
-    margin: 0;
-    font-family: 'Inter', sans-serif;
-    font-size: 15px;
+    margin: auto;
+    width: 500px;
+    margin-top: 100px;
     background: #1F2937;
-    text-align: center;
-    color: #FFFFFF;
+    font-family: Karla, sans-serif;
+    font-size: 20px;
+    color: #55F991;
 }
 
-/* MAIN BOX */
+h1 {
+    color: white;
+}
 
-.main {
-    margin-top: 0px;
+h2 {
+    font-family: 'Inter';
+    font-style: normal;
+
+}
+
+.line {
+    margin: 0 auto 30px auto;
+    border: 1px solid #2F3E53;
+}
+
+.generatebtn {
+    margin-bottom: 30px;
+    background: #10B981;
+    border-radius: 6px;
+    border: 1px solid #2F3E53;
+    font-family: 'Inter';
+    font-style: normal;
+    padding: 9px 17px 9px 15px;
+    color: white;
+}
+
+.button1n2 {    
+    border-radius: 4px;
+    background: #273549;
+    font-family: 'Inter';
+    padding: 6px;    
+     width: 450px;
+    height: 30px; */
+    margin: 0.2em auto 0 auto;
     padding-top: 15px;
     text-align: center;
-    background: #6943FF;
-}
-
-.block {
-    display: block;
-    margin: 20px auto 20px auto;
-}
-
-#inputbox {
-  width: 117px;
-  border: 2px solid #b295ff;
-  background-color: #6943ff;
-  border-radius: 5px;
-  text-align: center;
-  font-size: 58px;
-  color: #FFFFFF;
-}
-
-::placeholder {
-    font-size: 58px;
-    color: #FFFFFF;
-}
-
-.convertbutton {
-    margin: 10px auto 30px 0px;    
-    width: 117px;
-    height: 42px;
-    background: #FFFFFF;
-    border-radius: 5px;
-    border: 0px; 
-    color: #3D3D3D;
-    font-size: 16px;
-}
-
-
-/* GROUPS */
-
-.group-sections {
-    height: 400px;
-    padding: 20px;
-}
-
-#group-length {
-    height: 108.57px;
-    background: #273549;
-    border-radius: 5px 0px 0px 0px;
-    padding: 10px 0px 0px 0px;
-    margin-bottom: 20px;
-}
-
-#group-volume {
-    height: 108.57px;
-    background: #273549;
-    border-radius: 5px 0px 0px 0px;
-    padding: 10px 0px 0px 0px;
-    margin-bottom: 20px;
-}
-
-#group-mass {
-    height: 108.57px;
-    background: #273549;
-    border-radius: 5px 0px 0px 0px;
-    padding: 10px 0px 0px 0px;
 }
